cabal-version:       3.0
name:                RedViz
version:             0.3.0.0
synopsis:            a library for realtime interactive 3D visualizations
description:         a library for realtime graphics and interactive 3D visualizations.
homepage:            https://github.com/madjestic/RedViz
license:             BSD-3-Clause
license-file:        LICENSE
author:              madjestic
maintainer:          madjestic13@gmail.com
copyright:           Vladimir Lopatin
category:            Graphics
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     
                       Graphics.RedViz
                       Graphics.RedViz.LoadShaders
                       Graphics.RedViz.Rendering
                       Graphics.RedViz.Material
                       Graphics.RedViz.Material.Lens
                       Graphics.RedViz.Descriptor
                       Graphics.RedViz.Drawable
                       Graphics.RedViz.Drawable.Lens
                       Graphics.RedViz.Texture
                       Graphics.RedViz.Texture.Lens
                       Graphics.RedViz.Utils
                       Graphics.RedViz.Camera
                       Graphics.RedViz.Camera.Lens
                       Graphics.RedViz.Controllable
                       Graphics.RedViz.Input
                       Graphics.RedViz.Input.Keyboard
                       Graphics.RedViz.Input.Mouse
                       Graphics.RedViz.Input.Mouse.Lens
                       Graphics.RedViz.Input.FRP.Yampa.Update
                       Graphics.RedViz.Input.FRP.Yampa.Update.Mouse
                       Graphics.RedViz.Input.FRP.Yampa.Update.Keyboard
                       Graphics.RedViz.Input.FRP.Yampa
                       Graphics.RedViz.Input.FRP.Yampa.AppInput
                       Graphics.RedViz.Project.Model
                       Graphics.RedViz.Project.Lens
                       Graphics.RedViz.Project
                       Graphics.RedViz.Project.Utils
                       Graphics.RedViz.Widget
                       Graphics.RedViz.PGeo
                       Graphics.RedViz.VAO
                       Graphics.RedViz.FromVector
                       Graphics.RedViz.Object
                       Graphics.RedViz.Object.Lens
                       Graphics.RedViz.Backend
                       Graphics.RedViz.Primitives
                       Graphics.RedViz.GLTF
                       Graphics.RedViz.GLTF.Load
                       Graphics.RedViz.GLTF.Model
                       Graphics.RedViz.GLUtil
                       Graphics.RedViz.GLUtil.JuicyTextures
                       Graphics.RedViz.GLUtil.Textures
                       Graphics.RedViz.GLUtil.TypeMapping
                       Graphics.RedViz.Solvable
                       Graphics.RedViz.Transformable
                       
  --ghc-options:   -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  ghc-options:   -O2     
  --ghc-options:     -fprof-auto -fprof-cafs "-with-rtsopts=-N -p -s -hc -i0.1 -xc"
  --ghc-options:     -fprof-auto -fprof-cafs 
  --cpp-options:   -DDEBUG  
  build-depends:       base
                     , aeson               
                     , aeson-pretty
                     , array
                     , bearriver
                     , bytestring           
                     , containers
                     , directory
                     , geomancy                     
                     , gltf-codec
                     , gltf-loader
                     , gl-block
                     , JuicyPixels
                     , ilist               
                     , keid-core
                     , microlens
                     , microlens-th            
                     , linear              
                     , locators            
                     , massiv          
                     , OpenGL              
                     , random
                     , rio
                     , scientific          
                     , simple-affine-space 
                     , sdl2
                     , sort
                     , split
                     , store
                     , StateVar
                     , text                
                     , uuid                
                     , vector
                     
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:
                     ImportQualifiedPost
                     BlockArguments
                     LambdaCase
                     NamedFieldPuns
                     OverloadedStrings
                     RankNTypes
                     RecordWildCards
                     ScopedTypeVariables
                     TupleSections
                     TypeApplications
                     DerivingStrategies
                     DerivingVia
                     DeriveGeneric
    

source-repository head
  type:     git
  location: https://github.com/madjestic/RedViz