cabal-version:      3.4
name:               RedViz
version:            0.4.0.0
synopsis:           a library for realtime interactive 3D visualizations
description:        a library for realtime graphics and interactive 3D visualizations.
license:            BSD-3-Clause
license-file:       LICENSE
author:             madiestic
maintainer:         madjestic13@gmail.com
copyright:          Vladimir Lopatin
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.md
-- extra-source-files:

common warnings
    ghc-options:      -Wall
                      -fprint-potential-instances
                      -Wcompat -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -O2

library
    import:           warnings
    exposed-modules:
                       Graphics.RedViz
                     , Graphics.RedViz.Backend
                     , Graphics.RedViz.Component
                     , Graphics.RedViz.Controllable
                     , Graphics.RedViz.Descriptor
                     , Graphics.RedViz.Drawable
                     , Graphics.RedViz.Entity
                     , Graphics.RedViz.FromVector
                     , Graphics.RedViz.GLTF
                     , Graphics.RedViz.GLTF.Model
                     , Graphics.RedViz.GLTF.Load
                     , Graphics.RedViz.GLUtil.JuicyTextures
                     , Graphics.RedViz.GLUtil.Textures
                     , Graphics.RedViz.GLUtil.TypeMapping
                     , Graphics.RedViz.Game
                     , Graphics.RedViz.Input.Keyboard
                     , Graphics.RedViz.Input.Mouse
                     , Graphics.RedViz.LoadShaders
                     , Graphics.RedViz.Material
                     , Graphics.RedViz.PGeo
                     , Graphics.RedViz.Project
                     , Graphics.RedViz.Project.Lens
                     , Graphics.RedViz.Project.Model
                     , Graphics.RedViz.Rendering
                     , Graphics.RedViz.Texture
                     , Graphics.RedViz.Uniforms
                     , Graphics.RedViz.Utils
                     , Graphics.RedViz.VAO
                     , Graphics.RedViz.Widget

    other-modules:
                    Paths_RedViz
    build-depends:  base ^>=4.18.2.1
                  , bytestring
                  , containers
                  , geomancy
                  , gl-block
                  , gltf-codec
                  , keid-core
                  , rio
                  , vector
                  , aeson
                  , aeson-pretty
                  , OpenGL
                  , linear
                  , array
                  , JuicyPixels
                  , directory
                  , microlens
                  , ilist
                  , locators
                  , uuid
                  , simple-affine-space
                  , random
                  , microlens-th
                  , text
                  , gltf-loader
                  , massiv
                  , store
                  , sort
                  , StateVar
                  , sdl2 >=2.5.5.0

    hs-source-dirs: src
    --default-extensions:
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    default-language: GHC2021
