cabal-version:      3.4
name:               RedViz
version:            0.5.0.0
synopsis:           a library for realtime interactive 3D visualizations
description:        a library for realtime graphics and interactive 3D visualizations.
license:            BSD-3-Clause
license-file:       LICENSE
author:             madiestic
maintainer:         madjestic13@gmail.com
copyright:          Vladimir Lopatin
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.md
-- extra-source-files:

common warnings
    ghc-options:      -Wall
                      -fprint-potential-instances
                      -Wcompat -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -O2

library
    import:           warnings
    exposed-modules:
                       Graphics.RedViz
                     , Graphics.RedViz.Backend
                     , Graphics.RedViz.Component
                     , Graphics.RedViz.Controllable
                     , Graphics.RedViz.Descriptor
                     , Graphics.RedViz.Drawable
                     , Graphics.RedViz.Entity
                     , Graphics.RedViz.FromVector
                     , Graphics.RedViz.GLTF
                     , Graphics.RedViz.GLTF.Model
                     , Graphics.RedViz.GLTF.Load
                     , Graphics.RedViz.GLUtil.JuicyTextures
                     , Graphics.RedViz.GLUtil.Textures
                     , Graphics.RedViz.GLUtil.TypeMapping
                     , Graphics.RedViz.Game
                     , Graphics.RedViz.AppInput
                     , Graphics.RedViz.Input.Keyboard
                     , Graphics.RedViz.Input.Mouse
                     , Graphics.RedViz.LoadShaders
                     , Graphics.RedViz.Material
                     , Graphics.RedViz.PGeo
                     , Graphics.RedViz.Project
                     , Graphics.RedViz.Project.Lens
                     , Graphics.RedViz.Project.Model
                     , Graphics.RedViz.Rendering
                     , Graphics.RedViz.Texture
                     , Graphics.RedViz.Uniforms
                     , Graphics.RedViz.Utils
                     , Graphics.RedViz.VAO
                     , Graphics.RedViz.Widget
                     , Graphics.RedViz.GLUtil
                     -- OpenGL stuff
                     , Graphics.Rendering.OpenGL
                     , Graphics.Rendering.OpenGL.GL
                     , Graphics.Rendering.OpenGL.GL.Antialiasing
                     , Graphics.Rendering.OpenGL.GL.BeginEnd
                     , Graphics.Rendering.OpenGL.GL.Bitmaps
                     , Graphics.Rendering.OpenGL.GL.BufferObjects
                     , Graphics.Rendering.OpenGL.GL.Clipping
                     , Graphics.Rendering.OpenGL.GL.ColorSum
                     , Graphics.Rendering.OpenGL.GL.Colors
                     , Graphics.Rendering.OpenGL.GL.ConditionalRendering
                     , Graphics.Rendering.OpenGL.GL.CoordTrans
                     , Graphics.Rendering.OpenGL.GL.DebugOutput
                     , Graphics.Rendering.OpenGL.GL.DisplayLists
                     , Graphics.Rendering.OpenGL.GL.Evaluators
                     , Graphics.Rendering.OpenGL.GL.Feedback
                     , Graphics.Rendering.OpenGL.GL.FlushFinish
                     , Graphics.Rendering.OpenGL.GL.Fog
                     , Graphics.Rendering.OpenGL.GL.Framebuffer
                     , Graphics.Rendering.OpenGL.GL.FramebufferObjects
                     , Graphics.Rendering.OpenGL.GL.FramebufferObjects.Attachments
                     , Graphics.Rendering.OpenGL.GL.FramebufferObjects.FramebufferObjects
                     , Graphics.Rendering.OpenGL.GL.FramebufferObjects.Queries
                     , Graphics.Rendering.OpenGL.GL.FramebufferObjects.RenderbufferObjects
                     , Graphics.Rendering.OpenGL.GL.Hints
                     , Graphics.Rendering.OpenGL.GL.LineSegments
                     , Graphics.Rendering.OpenGL.GL.PerFragment
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.ColorTable
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.Convolution
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.Histogram
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.Minmax
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.PixelMap
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.PixelStorage
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.PixelTransfer
                     , Graphics.Rendering.OpenGL.GL.PixelRectangles.Rasterization
                     , Graphics.Rendering.OpenGL.GL.PixellikeObject
                     , Graphics.Rendering.OpenGL.GL.Points
                     , Graphics.Rendering.OpenGL.GL.Polygons
                     , Graphics.Rendering.OpenGL.GL.PrimitiveMode
                     , Graphics.Rendering.OpenGL.GL.QueryObjects
                     , Graphics.Rendering.OpenGL.GL.RasterPos
                     , Graphics.Rendering.OpenGL.GL.ReadCopyPixels
                     , Graphics.Rendering.OpenGL.GL.Rectangles
                     , Graphics.Rendering.OpenGL.GL.SavingState
                     , Graphics.Rendering.OpenGL.GL.Selection
                     , Graphics.Rendering.OpenGL.GL.Shaders
                     , Graphics.Rendering.OpenGL.GL.Shaders.Attribs
                     , Graphics.Rendering.OpenGL.GL.Shaders.Limits
                     , Graphics.Rendering.OpenGL.GL.Shaders.ProgramBinaries
                     , Graphics.Rendering.OpenGL.GL.Shaders.ProgramObjects
                     , Graphics.Rendering.OpenGL.GL.Shaders.ShaderBinaries
                     , Graphics.Rendering.OpenGL.GL.Shaders.ShaderObjects
                     , Graphics.Rendering.OpenGL.GL.Shaders.Uniform
                     , Graphics.Rendering.OpenGL.GL.StringQueries
                     , Graphics.Rendering.OpenGL.GL.SyncObjects
                     , Graphics.Rendering.OpenGL.GL.Tensor
                     , Graphics.Rendering.OpenGL.GL.Texturing
                     , Graphics.Rendering.OpenGL.GL.Texturing.Application
                     , Graphics.Rendering.OpenGL.GL.Texturing.Environments
                     , Graphics.Rendering.OpenGL.GL.Texturing.Objects
                     , Graphics.Rendering.OpenGL.GL.Texturing.Parameters
                     , Graphics.Rendering.OpenGL.GL.Texturing.Queries
                     , Graphics.Rendering.OpenGL.GL.Texturing.Specification
                     , Graphics.Rendering.OpenGL.GL.TransformFeedback
                     , Graphics.Rendering.OpenGL.GL.VertexArrayObjects
                     , Graphics.Rendering.OpenGL.GL.VertexArrays
                     , Graphics.Rendering.OpenGL.GL.VertexSpec
                     , Graphics.Rendering.OpenGL.GLU
                     , Graphics.Rendering.OpenGL.GLU.Errors
                     , Graphics.Rendering.OpenGL.GLU.Initialization
                     , Graphics.Rendering.OpenGL.GLU.Matrix
                     , Graphics.Rendering.OpenGL.GLU.Mipmapping
                     , Graphics.Rendering.OpenGL.GLU.NURBS
                     , Graphics.Rendering.OpenGL.GLU.Quadrics
                     , Graphics.Rendering.OpenGL.GLU.Tessellation


    other-modules:
                    Paths_RedViz
                    Graphics.Rendering.OpenGL.GL.BlendingFactor
                    Graphics.Rendering.OpenGL.GL.BufferMode
                    Graphics.Rendering.OpenGL.GL.ByteString
                    Graphics.Rendering.OpenGL.GL.Capability
                    Graphics.Rendering.OpenGL.GL.ComparisonFunction
                    Graphics.Rendering.OpenGL.GL.ControlPoint
                    Graphics.Rendering.OpenGL.GL.DataType
                    Graphics.Rendering.OpenGL.GL.Domain
                    Graphics.Rendering.OpenGL.GL.EdgeFlag
                    Graphics.Rendering.OpenGL.GL.Exception
                    Graphics.Rendering.OpenGL.GL.Face
                    Graphics.Rendering.OpenGL.GL.FramebufferObjects.FramebufferObject
                    Graphics.Rendering.OpenGL.GL.FramebufferObjects.FramebufferObjectAttachment
                    Graphics.Rendering.OpenGL.GL.FramebufferObjects.FramebufferTarget
                    Graphics.Rendering.OpenGL.GL.FramebufferObjects.RenderbufferObject
                    Graphics.Rendering.OpenGL.GL.FramebufferObjects.RenderbufferTarget
                    Graphics.Rendering.OpenGL.GL.GLboolean
                    Graphics.Rendering.OpenGL.GL.IOState
                    Graphics.Rendering.OpenGL.GL.MatrixComponent
                    Graphics.Rendering.OpenGL.GL.PeekPoke
                    Graphics.Rendering.OpenGL.GL.PixelData
                    Graphics.Rendering.OpenGL.GL.PixelFormat
                    Graphics.Rendering.OpenGL.GL.PixelRectangles.Reset
                    Graphics.Rendering.OpenGL.GL.PixelRectangles.Sink
                    Graphics.Rendering.OpenGL.GL.PointParameter
                    Graphics.Rendering.OpenGL.GL.PolygonMode
                    Graphics.Rendering.OpenGL.GL.PrimitiveModeInternal
                    Graphics.Rendering.OpenGL.GL.QueryObject
                    Graphics.Rendering.OpenGL.GL.QueryUtils
                    Graphics.Rendering.OpenGL.GL.QueryUtils.PName
                    Graphics.Rendering.OpenGL.GL.QueryUtils.VertexAttrib
                    Graphics.Rendering.OpenGL.GL.RenderMode
                    Graphics.Rendering.OpenGL.GL.Shaders.Program
                    Graphics.Rendering.OpenGL.GL.Shaders.Shader
                    Graphics.Rendering.OpenGL.GL.Shaders.Variables
                    Graphics.Rendering.OpenGL.GL.Texturing.Filter
                    Graphics.Rendering.OpenGL.GL.Texturing.PixelInternalFormat
                    Graphics.Rendering.OpenGL.GL.Texturing.TexParameter
                    Graphics.Rendering.OpenGL.GL.Texturing.TextureObject
                    Graphics.Rendering.OpenGL.GL.Texturing.TextureTarget
                    Graphics.Rendering.OpenGL.GL.Texturing.TextureUnit
                    Graphics.Rendering.OpenGL.GL.VertexAttributes
                    Graphics.Rendering.OpenGL.GLU.ErrorsInternal


    build-depends:  base ^>=4.18.2.1
                  , bytestring
                  , containers
                  , geomancy
                  , gl-block
                  , gltf-codec
                  , keid-core
                  , rio
                  , vector
                  , aeson
                  , aeson-pretty
                  --, OpenGL
                  , OpenGLRaw
                  , GLURaw
                  , linear
                  , array
                  , JuicyPixels
                  , directory
                  , microlens
                  , ilist
                  , locators
                  , uuid
                  , simple-affine-space
                  , random
                  , microlens-th
                  , text
                  , gltf-loader
                  , massiv
                  , store
                  , sort
                  , StateVar
                  , sdl2 >=2.5.5.0
                  , binary
                  , ObjectName
                  , hashable
                  , cryptohash
                  , uuid-types
                  , stm

  other-extensions:
    CPP
    DeriveDataTypeable
    KindSignatures
    TypeSynonymInstances
  if os(windows)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
  else
    cpp-options: "-DCALLCONV=ccall"

    hs-source-dirs: src
    --default-extensions:
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    default-language: GHC2021
